--- a/Index.html
+++ b/Index.html
@@ -2,3 +2,7 @@
 <head>
   <title>Breasy</title>
 </head>
+<body>
+  <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
+  <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and the fresh, cool air from outside, inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius. The entire system can also be turned off if you so please with the simple flip of a switch.</p>
+</body>
