--- a/index.html
+++ b/index.html
@@ -4,5 +4,18 @@
 </head>
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
-  <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and the fresh, cool air from outside, inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius. The entire system can also be turned off if you so please with the simple flip of a switch.</p>
+  <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius. The entire system can also be turned off if you so please with the simple flip of a switch.</p>
+  <table>
+    <th>Prototype features</th>
+    <tr>
+      <td>The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
+      <td>Insert microbit photo here</td>
+    </tr>
+    <tr>
+      <td>
+        Insert Switch image here
+      </td>
+      <td>During those cold winter months, when you don'tt need your house being any colder, you can turn off the breasy with just the switch of a button!</td>
+    </tr>
+  </table>
 </body>
