--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
   <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius. The entire system can also be turned off if you so please with the simple flip of a switch.</p>
-  <table border=1 id="table1">
+  <table border=1 id="table1" border-collapse:collapse>
     <th colspan="2">Prototype features</th>
     <tr>
       <td>The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
