--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <table border=1 id="table1" border-collapse:collapse>
     <th colspan="2">Prototype features</th>
     <tr>
-      <td>The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
+      <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
       <td>Insert microbit photo here</td>
     </tr>
     <tr>
