--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <th colspan="2">Prototype features</th>
     <tr>
       <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
-      <td>Insert microbit photo here</td>
+      <td><img src="Microbit led.jpg" alt="temperature display" width=600 height=600></td>
     </tr>
     <tr>
       <td>
