--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
-  <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius. The entire system can also be turned off if you so please with the simple flip of a switch.</p>
+  <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius.</p>
   <table id="table1">
     <th colspan="2">Prototype features</th>
     <tr>
