--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
   <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius.</p>
   <img src="breasy demo drawing.jpg" alt="demo drawing" width=1500 height=1072>
+  <h2>Prototype features</h2>
   <table id="table1">
-    <th colspan="2">Prototype features</th>
     <tr>
       <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
-      <td><img src="Microbit led.jpg" alt="temperature display" width=600 height=600></td>
+      <td><img src="Microbit led.jpg" alt="temperature display" width=1000 height=700></td>
     </tr>
     <tr>
       <td>
@@ -19,4 +19,5 @@
       <td>During those cold winter months, when you don'tt need your house being any colder, you can turn off the breasy with just the switch of a button!</td>
     </tr>
   </table>
+  <h2></h2>
 </body>
