--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <h2>Prototype features</h2>
   <table id="table1">
     <tr>
-      <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus</td>
+      <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus.
+      We installed code onto the BBC Microbit so that the temperature sensor</td>
       <td><img src="Microbit led.jpg" alt="temperature display" width=1000 height=700></td>
     </tr>
     <tr>
