--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <table id="table1">
     <tr>
       <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus.
-      We installed code onto the BBC Microbit so that the temperature sensor</td>
+      We have installed code onto the microbit to transmit the temperature in celsius from the sensor to the LED which displays that value. 
+        For more information on the code, proceed to the mechanics section below.</td>
       <td><img src="Microbit led.jpg" alt="temperature display" width=1000 height=700></td>
     </tr>
     <tr>
