--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h2>Prototype features</h2>
   <table id="table1">
     <tr>
-      <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus.
-      We have installed code onto the microbit to transmit the temperature in celsius from the sensor to the LED which displays that value. 
+      <td class="description">The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus.<br>
+      We have installed code onto the microbit to transmit the temperature in celsius from the sensor to the LED which displays that value.<br>
         For more information on the code, proceed to the mechanics section below.</td>
       <td><img src="Microbit led.jpg" alt="temperature display" width=1000 height=700></td>
     </tr>
