--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
   <p>The breasy is an automatic cooling system that pulls the moisture from your home outside and fresh cool air inside. The breasy turns on automatically when it detects the home is hotter than 21 degrees celsius.</p>
-  <img src="breasy demo drawing.jpg" alt="demo drawing" width=1500 height=1072>
+  <img src="breasy demo drawing.jpg" alt="demo drawing" width=1500 height=1072 class="center">
   <h2>Prototype features</h2>
   <table id="table1">
     <tr>
