--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <td>
         Insert Switch image here
       </td>
-      <td>During those cold winter months, when you don'tt need your house being any colder, you can turn off the breasy with just the switch of a button!</td>
+      <td>You can turn off the breasy with the simple switch of a button! Perfect for the chilly winter weather.</td>
     </tr>
   </table>
   <h2></h2>
