--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
   <p id="subtitle">Breasy is an automatic home cooling system that pulls the moisture from your home outside and fresh cool air inside.</p>
-  <img src="breasy benner.jpg" alt="banner" width=1500 height=400 class="center">
+  <img src="Breasy banner.jpg" alt="banner" width=1500 height=400 class="center">
   <h2>Prototype features</h2>
   <table id="table1">
     <tr>
