--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Breasy</title>
+  <link rel="stylesheet" href="styles.css"> </link>
 </head>
 <body>
   <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
