--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="styles.css"> </link>
 </head>
 <body>
-  <h1>Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
-  <p id="subtitle">Breasy is an automatic home cooling system that pulls the moisture from your home outside and fresh cool air inside.</p>
+  <h1 id="header1">Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
+  <p id="subtitle">The Breasy is an automatic home cooling system that pulls the moisture from your home outside and fresh cool air inside.</p>
   <img src="Breasy banner.jpg" alt="banner" width=2250 height=400 class="center">
   <h2>Prototype features</h2>
   <table id="table1">
