--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Breasy</title>
-  <link rel="stylesheet" href="styles.css"> </link>
+    <link rel="stylesheet" href="styles.css"> </link>
+    <title>How computer use affects the environment</title>
 </head>
 <body>
-  <h1 id="header1">Do you hate the hot, humid summer weather? Well, do we have the invention for you!</h1>
-  <p id="subtitle">The Breasy is an automatic home cooling system that pulls the moisture from your home outside and fresh cool air inside.</p>
-  <img src="Breasy banner.jpg" alt="banner" width=2250 height=400 class="center">
-  <h2>Prototype features</h2>
-  <table id="table1">
+    <img src="indexbanner.jpg" alt="Index Banner" width=100% height=600/>
+    <table>
+        <tr>
+            <td>
+            <p class="header1">Many steps of the process to use a computer affect the environment. Some key examples are production, use and disposal. More can be read about this topic by clicking on the "Environmental Impact page".</p>
+            </td>
+            <td>
+            <p class="header1">Although fully getting rid of the environmental impact of computer use is not possible, there are several steps you can take to greatly reduce it. You can find information about it under the "Minimizing Impact" button below.</p>
+            </td>
+        </tr>
+<table>
     <tr>
-      <td class="description"><b>The breasy automatic home cooler has an LED system that displays the temperature of your home in degrees celsisus.</b><br>
-      We have installed code onto the microbit to transmit the temperature in celsius from the sensor to the LED which displays that value.<br>
-        For more information on the code, proceed to the mechanics section below.</td>
-      <td><img src="Microbit led.jpg" alt="temperature display" width=1000 height=700></td>
+      <td><a href="page2.html"><button class= "btn2"><p class="text2">Environmental Impact</p></button></a></td>
+        <td><a href="page3.html"><button class= "btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+    </tr>
+</table>
+<table border=0.5>
+    <tr>
+        <th colspan="4" id="tablehead">Sources</th>
     </tr>
     <tr>
-      <td>
-        Insert Switch image here
-      </td>
-      <td>You can turn off the breasy with the simple switch of a button! Perfect for the chilly winter weather.</td>
+        <td class="source">
+            <a href="https://www.who.int/news-room/fact-sheets/detail/electronic-waste-(e-waste)#:~:text=Every%20year%20millions%20of%20electrical,disposed%20of%20and%20recycled%20appropriately">World Health Organization-Electronic Waste</a>
+        </td>
+        <td class="source">
+            <a href="https://ised-isde.canada.ca/site/office-consumer-affairs/en/be-green-consumer/responsible-use-digital-technologies">Government of Canada-Responsible Use of Digital Techonologies</a>
+        </td>
+        <td class="source">
+           <a href="https://www.it.ox.ac.uk/article/environment-and-it">University of Oxford-Environmental Impact of IT</a>
+        </td>
+        <td class="source">
+            <a href="https://lcrcharity.co.uk/evaluating-the-environmental-impact-of-computer-manufacturing-vs-recycling/">London Computer Recycling Charity-Evalutating the Environmental Impact of Computer Manufacturing vs. Recycling</a>
+        </td>
     </tr>
-  </table>
-  <h2></h2>
+</table>
 </body>
+</html>
