--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>How computer use affects the environment</title>
 </head>
 <body>
-    <img src="indexbanner.jpg" alt="Index Banner" width=100% height=600/>
+    <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <table>
         <tr>
             <td>
