--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css"> </link>
-    <title>How computer use affects the environment</title>
+    <title>Breasy</title>
 </head>
 <body>
     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
@@ -17,8 +17,8 @@
         </tr>
 <table>
     <tr>
-      <td><a href="page2.html"><button class= "btn2"><p class="text2">Environmental Impact</p></button></a></td>
-        <td><a href="page3.html"><button class= "btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+      <td><a href="mechanics.html"><button class= "btn2"><p class="text2">How it works</p></button></a></td>
+        <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
     </tr>
 </table>
 <table border=0.5>
