--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@
 </head>
 <body>
     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
-    <table>
-        <tr>
-            <td>
-            <p class="header1">Many steps of the process to use a computer affect the environment. Some key examples are production, use and disposal. More can be read about this topic by clicking on the "Environmental Impact page".</p>
-            </td>
-            <td>
-            <p class="header1">Although fully getting rid of the environmental impact of computer use is not possible, there are several steps you can take to greatly reduce it. You can find information about it under the "Minimizing Impact" button below.</p>
-            </td>
-        </tr>
-<table>
+    <p class="header1">The Breasy is an automatic home coolling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">How it works</p></button></a></td>
         <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
