--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <p class="header1">The Breasy is an automatic home coolling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
+    <table>
+        <tr>
+            <td></td>
+        </tr>
+    </table>
+    <table>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">How it works</p></button></a></td>
         <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
