--- a/mechanics.html
+++ b/mechanics.html
@@ -1,1 +1,54 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="styles.css"> </link>
+    <title>Environmental impacts of Computer Use</title>
+  </head>
+  <body>
+    <img src="Page2banner.jpg" alt="banner2" width=100% height=300/>
+    <p class="header2">Environmental Impacts of computer use</p>
+    <table border=0.5>
+      <tr>
+        <td><img src="unnamed.jpg" alt= "computer manufacutring plant" width= 700 height= 400></img></td>
+        <td class="text">Large amounts of greenhouse gases are released every year as a result of computer prodution. Research has found that just the manufacturing and transportation alone makes up 85% of the greenhouse gas emissions from a computer used for 6 years.
+        <ul class="text">
+          <li>Harvesting the materials and minerals used for computer part production uses lots of energy and releases pollution due to harmful mining practises</li>
+          <li>Many parts such as the motherboard need high-precision lasers that consume a lot of energy which could be supplied by fossil fuels</li>
+          <li>As most parts are produced overseas, they need to be shipped by large cargo boats that produce around 1000 megatons of carbon dioxide per year</li>
+        </ul>
+        </td>
+      </tr>
+    </table>
+    <table border=0.5>
+      <tr>
+        <td>
+          <p class="text">Every step of using a computer impacts the environment, from powering it to streaming content.</p>
+        <ul class="text">
+          <li>Watching short content on TikTok, texting your friends on Instagram take, long form content on youtube and even video calling from Discord all use a lot of electricity.</li>
+          <li>Maintaining the servers that hold the data for your videos, the router that gives you access to the internet and transferring the data to your device all uses large amounts of energy that are commonly supplied by fossil fuels.</li>
+          <li>Powering the computer for use uses about 40 watts which is energy that may have released greenhouse gases to produce</li>
+        </ul>
+        </td>
+        <td><img src="datastorage.jpg" alt= "servers" width= 650 height= 325></img></td>
+      </tr>
+    </table>
+<table border=0.5>
+  <tr>
+    <td><img src="computerlandfill.jpg" alt="Computer Waste" width=600 height=400></img></td>
+    <td>
+      <ul class="text">
+        <li>Computers and the parts they are made of do not decompose easily, with some parts taking up to a million years to decompose.</li>
+        <li>Certain methods to quickly break down the parts like burning release harmful gases into the atmosphere which could harm the people that live near the landfills.</li>
+        <li>Parts like the batteries may leak acid into the ground that pollutes the drinking water for those living around the e-waste storage sites.</li>
+      </ul>
+    </td>
+  </tr>
+</table>
+<table>
+    <tr>
+      <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
+      <td><a href="page3.html"><button class="btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+    </tr>
+</table>
+</body>
+</html>
