--- a/mechanics.html
+++ b/mechanics.html
@@ -2,53 +2,42 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css"> </link>
-    <title>Environmental impacts of Computer Use</title>
+    <title>Minimizing Impacts of Computer Use</title>
   </head>
   <body>
-    <img src="Page2banner.jpg" alt="banner2" width=100% height=300/>
-    <p class="header2">Environmental Impacts of computer use</p>
-    <table border=0.5>
+    <table>
       <tr>
-        <td><img src="unnamed.jpg" alt= "computer manufacutring plant" width= 700 height= 400></img></td>
-        <td class="text">Large amounts of greenhouse gases are released every year as a result of computer prodution. Research has found that just the manufacturing and transportation alone makes up 85% of the greenhouse gas emissions from a computer used for 6 years.
-        <ul class="text">
-          <li>Harvesting the materials and minerals used for computer part production uses lots of energy and releases pollution due to harmful mining practises</li>
-          <li>Many parts such as the motherboard need high-precision lasers that consume a lot of energy which could be supplied by fossil fuels</li>
-          <li>As most parts are produced overseas, they need to be shipped by large cargo boats that produce around 1000 megatons of carbon dioxide per year</li>
-        </ul>
-        </td>
-      </tr>
+      <th colspan="3"><img src= "Page3banner.jpg" alt="minimizing impacts banner" width=100% height="680"></img></th>
+    </tr>
     </table>
-    <table border=0.5>
+    <p class="header2">Minimizing impacts of computer use</p>
+    <p class="text">There are methods that could reduce the effects of computer production that both the producers and consumers can do. 
+    <p class="text">First of all, limit the amount of devices and/or electronics you need. This could be in the form of only using one monitor for your desktop or using just a laptop instead of a personal computer and one.</p>
+    <p class="text">As well, try your best to use your devices fully before switching, replacing is both expensive and harmful to the environment.</p>
+    <p class="text">Now, for the producers. It would be best to begin using more sustainable resources to make computer parts, natural resources would break down easier and reduce the energy needed to acquire them.</p>
+    <img src="ecofriendlycomputers.jpg" alt="eco-friendly computers" width=600 height=400 id="image1"/>
+    <p class="text">When it comes to using a computer, there are also ways to reduce the energy consumption.</p>
+    <p class="text">The first thing you should focus on is your power supply. When you are not using it, consider keeping it on power saving mode, shutting it off, or unplugging it from the outlet completely. 
+      An article from the Univeristy of Oxford found that 80% of energy is saved when the computer is unplugged compared to turned on.</p>
+    <p class="text">As previously mentioned, storing data uses electricity. It is because of that why you should remove any unnecessary files.</p>
+    <img src="powersavingmethods.png" alt="power saving methods" width= 700 height=400 id="image2"/>
+    <table>
       <tr>
         <td>
-          <p class="text">Every step of using a computer impacts the environment, from powering it to streaming content.</p>
-        <ul class="text">
-          <li>Watching short content on TikTok, texting your friends on Instagram take, long form content on youtube and even video calling from Discord all use a lot of electricity.</li>
-          <li>Maintaining the servers that hold the data for your videos, the router that gives you access to the internet and transferring the data to your device all uses large amounts of energy that are commonly supplied by fossil fuels.</li>
-          <li>Powering the computer for use uses about 40 watts which is energy that may have released greenhouse gases to produce</li>
-        </ul>
+          <p class="text">There exists electronic recycling programs in many countries that allow you to throw out unused devices to have their parts repurposed. This serves as a great alternative to throwing out your electronics and </p>
+          <p class="text">Although eco-friendly options for computer disposal exists, you should still take into account adaptability when purchasing a device. 
+            For example, look for choosing a newer generation motherboard for a desktop so that you will not have to replace it along with your cpu and ram when looking to upgrade.</p>
         </td>
-        <td><img src="datastorage.jpg" alt= "servers" width= 650 height= 325></img></td>
+        <td>
+          <img src="computerrecycling.jpeg" alt="computer recycling" width=650 height=300/>
+        </td>
       </tr>
     </table>
-<table border=0.5>
-  <tr>
-    <td><img src="computerlandfill.jpg" alt="Computer Waste" width=600 height=400></img></td>
-    <td>
-      <ul class="text">
-        <li>Computers and the parts they are made of do not decompose easily, with some parts taking up to a million years to decompose.</li>
-        <li>Certain methods to quickly break down the parts like burning release harmful gases into the atmosphere which could harm the people that live near the landfills.</li>
-        <li>Parts like the batteries may leak acid into the ground that pollutes the drinking water for those living around the e-waste storage sites.</li>
-      </ul>
-    </td>
-  </tr>
-</table>
-<table>
+    <table border=0.5>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
-      <td><a href="page3.html"><button class="btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+      <td><a href="page2.html"><button class="btn2"><p class="text2">Environmental Imapct</p></button></a></td>
     </tr>
-</table>
-</body>
+   </table>
+  </body>
 </html>
