--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 </head>
 <body>
     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
-    <p class="header1">The Breasy is an automatic home coolling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
+    <p class="header1">Are you lazy? Do you hate the hot, humid summer weather? Well, do we have the product for you. <br>
+    The Breasy is an automatic home coolling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
+    <p>The Breasy uses a temperature sensor on the Microbit connected to the circuit to power the motor whenever the temperature is warmer or colder than any temperature of your choosing, we used room temperature for our demo.</p>
     <table>
         <tr>
-            <td></td>
+            <td>On top of the Microbit controlling the system, we also install a switch that allows you to fully power on or off the Breasy system per your choosing, perfect for the chilly winter season.</td>
+            <td>The temperature sensor is also utilised to display the current temperature of your home via the LEDs also on the Microbit.</td>
+        </tr>
+        <tr>
+            <td>Insert switch picture</td>
+            <td><img src="Microbit led.jpg" alt="Temp Display" width=700 height=600> ></td>
         </tr>
     </table>
     <table>
