--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <p>The Breasy uses a temperature sensor on the Microbit connected to the circuit to power the motor whenever the temperature is warmer or colder than any temperature of your choosing, we used room temperature for our demo.</p>
     <table>
         <tr>
-            <td>On top of the Microbit controlling the system, we also install a switch that allows you to fully power on or off the Breasy system per your choosing, perfect for the chilly winter season.</td>
-            <td>The temperature sensor is also utilised to display the current temperature of your home via the LEDs also on the Microbit.</td>
-        </tr>
-        <tr>
             <td>Insert switch picture</td>
             <td><img src="Microbit led.jpg" alt="Temp Display" width=700 height=600> ></td>
+        </tr>
+        <tr>
+            <td>Perfect for the chilly winter season, we have a switch that fully powers on or off the Breasy system.</td>
+            <td>The temperature sensor is also utilised to display the current temperature of your home via the LEDs also on the Microbit.</td>
         </tr>
     </table>
     <table>
