--- a/index.html
+++ b/index.html
@@ -20,29 +20,15 @@
         </tr>
     </table>
     <table>
+        <tr>
+            <td>↓To see the details behind the prototype, click here↓</td>
+            <td>↓To see the components of the prototype, click here↓</td>
+        </tr>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">How it works</p></button></a></td>
         <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
     </tr>
 </table>
 <table border=0.5>
-    <tr>
-        <th colspan="4" id="tablehead">Sources</th>
-    </tr>
-    <tr>
-        <td class="source">
-            <a href="https://www.who.int/news-room/fact-sheets/detail/electronic-waste-(e-waste)#:~:text=Every%20year%20millions%20of%20electrical,disposed%20of%20and%20recycled%20appropriately">World Health Organization-Electronic Waste</a>
-        </td>
-        <td class="source">
-            <a href="https://ised-isde.canada.ca/site/office-consumer-affairs/en/be-green-consumer/responsible-use-digital-technologies">Government of Canada-Responsible Use of Digital Techonologies</a>
-        </td>
-        <td class="source">
-           <a href="https://www.it.ox.ac.uk/article/environment-and-it">University of Oxford-Environmental Impact of IT</a>
-        </td>
-        <td class="source">
-            <a href="https://lcrcharity.co.uk/evaluating-the-environmental-impact-of-computer-manufacturing-vs-recycling/">London Computer Recycling Charity-Evalutating the Environmental Impact of Computer Manufacturing vs. Recycling</a>
-        </td>
-    </tr>
-</table>
 </body>
 </html>
