--- a/mechanics.html
+++ b/mechanics.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css"> </link>
-    <title>Minimizing Impacts of Computer Use</title>
+    <title>How it works</title>
   </head>
   <body>
     <table>
@@ -10,7 +10,7 @@
       <th colspan="3"><img src= "Page3banner.jpg" alt="minimizing impacts banner" width=100% height="680"></img></th>
     </tr>
     </table>
-    <p class="header2">Minimizing impacts of computer use</p>
+    <p class="header2">Mechanics of the prototype</p>
     <p class="text">There are methods that could reduce the effects of computer production that both the producers and consumers can do. 
     <p class="text">First of all, limit the amount of devices and/or electronics you need. This could be in the form of only using one monitor for your desktop or using just a laptop instead of a personal computer and one.</p>
     <p class="text">As well, try your best to use your devices fully before switching, replacing is both expensive and harmful to the environment.</p>
