--- a/mechanics.html
+++ b/mechanics.html
@@ -5,13 +5,9 @@
     <title>How it works</title>
   </head>
   <body>
-    <table>
-      <tr>
-      <th colspan="3"><img src= "Page3banner.jpg" alt="minimizing impacts banner" width=100% height="680"></img></th>
-    </tr>
-    </table>
+     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <p class="header2">Mechanics of the prototype</p>
-    <p class="text">There are methods that could reduce the effects of computer production that both the producers and consumers can do. 
+    <p class="text">On this page, you will find out how the Breasy system actually works</p>
     <p class="text">First of all, limit the amount of devices and/or electronics you need. This could be in the form of only using one monitor for your desktop or using just a laptop instead of a personal computer and one.</p>
     <p class="text">As well, try your best to use your devices fully before switching, replacing is both expensive and harmful to the environment.</p>
     <p class="text">Now, for the producers. It would be best to begin using more sustainable resources to make computer parts, natural resources would break down easier and reduce the energy needed to acquire them.</p>
