--- a/mechanics.html
+++ b/mechanics.html
@@ -8,26 +8,30 @@
      <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <p class="header2">Mechanics of the prototype</p>
     <p class="text">On this page, you will find out how the Breasy system actually works</p>
-    <p class="text">First of all, limit the amount of devices and/or electronics you need. This could be in the form of only using one monitor for your desktop or using just a laptop instead of a personal computer and one.</p>
-    <p class="text">As well, try your best to use your devices fully before switching, replacing is both expensive and harmful to the environment.</p>
-    <p class="text">Now, for the producers. It would be best to begin using more sustainable resources to make computer parts, natural resources would break down easier and reduce the energy needed to acquire them.</p>
-    <img src="ecofriendlycomputers.jpg" alt="eco-friendly computers" width=600 height=400 id="image1"/>
-    <p class="text">When it comes to using a computer, there are also ways to reduce the energy consumption.</p>
-    <p class="text">The first thing you should focus on is your power supply. When you are not using it, consider keeping it on power saving mode, shutting it off, or unplugging it from the outlet completely. 
-      An article from the Univeristy of Oxford found that 80% of energy is saved when the computer is unplugged compared to turned on.</p>
-    <p class="text">As previously mentioned, storing data uses electricity. It is because of that why you should remove any unnecessary files.</p>
-    <img src="powersavingmethods.png" alt="power saving methods" width= 700 height=400 id="image2"/>
+    <img src="tinkercad.png" alt="tinkercad" width=1000 height=600>
+    <p class="text">↑The image above is a diagram of the entire circuit, it was made on Tinkercad.↑</p>
     <table>
       <tr>
-        <td>
-          <p class="text">There exists electronic recycling programs in many countries that allow you to throw out unused devices to have their parts repurposed. This serves as a great alternative to throwing out your electronics and </p>
-          <p class="text">Although eco-friendly options for computer disposal exists, you should still take into account adaptability when purchasing a device. 
-            For example, look for choosing a newer generation motherboard for a desktop so that you will not have to replace it along with your cpu and ram when looking to upgrade.</p>
-        </td>
-        <td>
-          <img src="computerrecycling.jpeg" alt="computer recycling" width=650 height=300/>
-        </td>
+        <td>Beginning with the Microbit, code is installed so that a positive signal is sent through gate "0" to a 1k ohm resistor for extra safety.</td>
+        <td>tinkercad1</td>
       </tr>
+      <tr>
+        <td>Tinkercad2</td>
+        <td>The positive signal is sent to the middle leg of the transistor, telling it to close the circuit and therefore allow power to flow.</td>
+      </tr>
+      <tr>
+        <td>The next major section is the battery. A 9 volt battery is used so that enough voltage can be supplied to the motor and the positive terminal is conencted to a switch to shut the power on or off.</td>
+        <td>tinkercad3</td>
+      </tr>
+      <tr>
+        <td>tinkercad4</td>
+        <td>We have a diode placed with the grey side away from the transistor so that the motor does not send voltage flowing backwards.</td>
+      </tr>
+      <tr>
+        <td>tinkercad5</td>
+        <td>Finally, once everything else is connected, the motor is connected to both ends of the diode and the circuit will be operational.</td>
+      </tr>
+    </table>
     </table>
     <table border=0.5>
     <tr>
