--- a/mechanics.html
+++ b/mechanics.html
@@ -13,22 +13,22 @@
     <table>
       <tr>
         <td>Beginning with the Microbit, code is installed so that a positive signal is sent through gate "0" to a 1k ohm resistor for extra safety.</td>
-        <td>tinkercad1</td>
+        <td><img src="tinkercad1.png" alt="tinkercad1" width=1000 height=600></td>
       </tr>
       <tr>
-        <td>Tinkercad2</td>
+        <td><img src="tinkercad2.png" alt="tinkercad2" width=1000 height=600></td>
         <td>The positive signal is sent to the middle leg of the transistor, telling it to close the circuit and therefore allow power to flow.</td>
       </tr>
       <tr>
         <td>The next major section is the battery. A 9 volt battery is used so that enough voltage can be supplied to the motor and the positive terminal is conencted to a switch to shut the power on or off.</td>
-        <td>tinkercad3</td>
+        <td><img src="tinkercad3.png" alt="tinkercad3" width=1000 height=600></td>
       </tr>
       <tr>
-        <td>tinkercad4</td>
+        <td><img src="tinkercad4.png" alt="tinkercad4" width=1000 height=600></td>
         <td>We have a diode placed with the grey side away from the transistor so that the motor does not send voltage flowing backwards.</td>
       </tr>
       <tr>
-        <td>tinkercad5</td>
+        <td><img src="tinkercad5.png" alt="tinkercad5" width=1000 height=600></td>
         <td>Finally, once everything else is connected, the motor is connected to both ends of the diode and the circuit will be operational.</td>
       </tr>
     </table>
