--- a/mechanics.html
+++ b/mechanics.html
@@ -12,7 +12,7 @@
     <p class="text">↑The image above is a diagram of the entire circuit, it was made on Tinkercad.↑</p>
     <table>
       <tr>
-        <td>Beginning with the Microbit, code is installed so that a positive signal is sent through gate "0" to a 1k ohm resistor for extra safety.</td>
+        <td class="mechanics">Beginning with the Microbit, code is installed so that a positive signal is sent through gate "0" to a 1k ohm resistor for extra safety.</td>
         <td><img src="tinkercad1.png" alt="tinkercad1" width=1000 height=600></td>
       </tr>
       <tr>
