--- a/mechanics.html
+++ b/mechanics.html
@@ -7,7 +7,7 @@
   <body>
      <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <p class="header2">Mechanics of the prototype</p>
-    <p class="text">On this page, you will find out how the major parts of the Breasy system works</p>
+    <p class="text">On this page, you will find out how the major parts of the Breasy system work.</p>
     <img src="tinkercad.png" alt="tinkercad" width=1000 height=600>
     <p class="text">↑The image above is a diagram of the entire circuit, it was made on Tinkercad.↑</p>
     <table>
