--- a/mechanics.html
+++ b/mechanics.html
@@ -17,19 +17,19 @@
       </tr>
       <tr>
         <td><img src="tinkercad2.png" alt="tinkercad2" width=1000 height=600></td>
-        <td>The positive signal is sent to the middle leg of the transistor, telling it to close the circuit and therefore allow power to flow.</td>
+        <td class="mechanics">The positive signal is sent to the middle leg of the transistor, telling it to close the circuit and therefore allow power to flow.</td>
       </tr>
       <tr>
-        <td>The next major section is the battery. A 9 volt battery is used so that enough voltage can be supplied to the motor and the positive terminal is conencted to a switch to shut the power on or off.</td>
+        <td class="mechanics">The next major section is the battery. A 9 volt battery is used so that enough voltage can be supplied to the motor and the positive terminal is conencted to a switch to shut the power on or off.</td>
         <td><img src="tinkercad3.png" alt="tinkercad3" width=1000 height=600></td>
       </tr>
       <tr>
         <td><img src="tinkercad4.png" alt="tinkercad4" width=1000 height=600></td>
-        <td>We have a diode placed with the grey side away from the transistor so that the motor does not send voltage flowing backwards.</td>
+        <td class="mechanics">We have a diode placed with the grey side away from the transistor so that the motor does not send voltage flowing backwards.</td>
       </tr>
       <tr>
         <td><img src="tinkercad5.png" alt="tinkercad5" width=1000 height=600></td>
-        <td>Finally, once everything else is connected, the motor is connected to both ends of the diode and the circuit will be operational.</td>
+        <td class="mechanics">Finally, once everything else is connected, the motor is connected to both ends of the diode and the circuit will be operational.</td>
       </tr>
     </table>
     </table>
