--- a/mechanics.html
+++ b/mechanics.html
@@ -36,7 +36,7 @@
     <table border=0.5>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
-      <td><a href="page2.html"><button class="btn2"><p class="text2">Environmental Imapct</p></button></a></td>
+      <td><a href="components.html"><button class="btn2"><p class="text2">Environmental Imapct</p></button></a></td>
     </tr>
    </table>
   </body>
