--- a/components.html
+++ b/components.html
@@ -47,7 +47,7 @@
 <table>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
-      <td><a href="page3.html"><button class="btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+      <td><a href="mechanics.html"><button class="btn3"><p class="text3">Minimizing Impact</p></button></a></td>
     </tr>
 </table>
 </body>
