--- a/mechanics.html
+++ b/mechanics.html
@@ -5,7 +5,25 @@
     <title>How it works</title>
   </head>
   <body>
+    <table>
+      <tr>
+        <td>
      <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
+      </tr>
+      <td>Components list <ul>
+        <li>1 motor</li>
+        <li>1 breadboard</li>
+        <li>1 Microbit</li>
+        <li>1 Switch</li>
+        <li>1 9 Volt Battery</li>
+        <li>1 battery cap(or another alligator clip to male jumper wire</li>
+        <li>1 1k ohm resistor</li>
+        <li>1 NPN transistor</li>
+        <li>1 diode</li>
+        <li>6(minimum) alligator to male jumper wires</li>
+      </ul></td>
+    </tr>
+    </table>
     <p class="header2">Mechanics of the prototype</p>
     <p class="text">On this page, you will find out how the major parts of the Breasy system work.</p>
     <img src="tinkercad.png" alt="tinkercad" width=1000 height=600>
