--- a/mechanics.html
+++ b/mechanics.html
@@ -9,6 +9,15 @@
       <tr>
         <td>
      <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
+    </table>
+    <p class="header2">Mechanics of the prototype</p>
+    <p class="text">On this page, you will find out how the major parts of the Breasy system work.</p>
+    <table>
+      <tr>
+        <td>
+    <img src="tinkercad.png" alt="tinkercad" width=940 height=590>
+        </td>
+      </tr>
       </tr>
       <td>Components list <ul>
         <li>1 motor</li>
@@ -24,9 +33,6 @@
       </ul></td>
     </tr>
     </table>
-    <p class="header2">Mechanics of the prototype</p>
-    <p class="text">On this page, you will find out how the major parts of the Breasy system work.</p>
-    <img src="tinkercad.png" alt="tinkercad" width=940 height=590>
     <p class="text">↑The image above is a diagram of the entire circuit, it was made on Tinkercad.↑</p>
     <table>
       <tr>
