--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <td>↓To see the components of the prototype, click here↓</td>
         </tr>
     <tr>
-      <td><a href="mechanics.html"><button class= "btn2"><p class="text2">How it works</p></button></a></td>
+      <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
         <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
     </tr>
 </table>
