--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </tr>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
-        <td><a href="components.html"><button class= "btn3"><p class="text3">What is used</p></button></a></td>
+        <td><a href="components.html"><button class= "btn3"><p class="text3">Code</p></button></a></td>
     </tr>
 </table>
 <table border=0.5>
