--- a/mechanics.html
+++ b/mechanics.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css"> </link>
-    <title>How it works</title>
+    <title>Components and their uses</title>
   </head>
   <body>
     <table>
@@ -60,7 +60,7 @@
     <table border=0.5>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
-      <td><a href="components.html"><button class="btn2"><p class="text2">Environmental Imapct</p></button></a></td>
+      <td><a href="components.html"><button class="btn2"><p class="text2">Code</p></button></a></td>
     </tr>
    </table>
   </body>
