--- a/components.html
+++ b/components.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css"> </link>
-    <title>Environmental impacts of Computer Use</title>
+    <title>Prototype code</title>
   </head>
   <body>
-    <img src="Page2banner.jpg" alt="banner2" width=100% height=300/>
-    <p class="header2">Environmental Impacts of computer use</p>
+    <img src="Breasybanner.jpg" alt="banner2" width=100% height=400/>
+    <p class="header2">Prototype code</p>
     <table border=0.5>
       <tr>
         <td><img src="unnamed.jpg" alt= "computer manufacutring plant" width= 700 height= 400></img></td>
@@ -47,7 +47,7 @@
 <table>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
-      <td><a href="mechanics.html"><button class="btn3"><p class="text3">Minimizing Impact</p></button></a></td>
+      <td><a href="mechanics.html"><button class="btn3"><p class="text3">Components and their uses</p></button></a></td>
     </tr>
 </table>
 </body>
