--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     <p class="header1">Are you lazy? Do you hate the hot, humid summer weather? Well, do we have the product for you. <br>
-    The Breasy is an automatic home coolling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
+    The Breasy is an automatic home cooling system. It utilises a motor that pulls moisture outside and brings cool, fresh air inside.</p>
     <p>The Breasy uses a temperature sensor on the Microbit connected to the circuit to power the motor whenever the temperature is warmer or colder than any temperature of your choosing, we used room temperature for our demo.</p>
     <table>
         <tr>
