--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table>
         <tr>
             <td>Insert switch picture</td>
-            <td><img src="Microbit led.jpg" alt="Temp Display" width=700 height=600> ></td>
+            <td><img src="Microbit led.jpg" alt="Temp Display" width=700 height=600></td>
         </tr>
         <tr>
             <td>Perfect for the chilly winter season, we have a switch that fully powers on or off the Breasy system.</td>
