--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </table>
     <table>
         <tr>
-            <td>↓To see the details behind the prototype, click here↓</td>
-            <td>↓To see the components of the prototype, click here↓</td>
+            <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
+            <td class="btndesc">↓To see the components of the prototype, click here↓</td>
         </tr>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
