--- a/components.html
+++ b/components.html
@@ -5,6 +5,12 @@
     <title>Prototype code</title>
   </head>
   <body>
+    <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
+  <h3 class="w3-bar-item">Menu</h3>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
     <img src="Breasybanner.jpg" alt="banner2" width=100% height=400/>
     <p class="header2">Prototype code</p>
     <table border=0.5>
