--- a/components.html
+++ b/components.html
@@ -5,12 +5,13 @@
     <title>Prototype code</title>
   </head>
   <body>
-    <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
-  <h3 class="w3-bar-item">Menu</h3>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+   div class="w3-sidebar w3-bar-block" style="width:25%">
+  <a href="index.html" class="btn1">Link 1</a>
+  <a href="components.html" class="btn2">Link 2</a>
+  <a href="mechanics.html" class="btn3">Link 3</a>
 </div>
+
+<div style="margin-left:25%">
     <img src="Breasybanner.jpg" alt="banner2" width=100% height=400/>
     <p class="header2">Prototype code</p>
     <table border=0.5>
@@ -56,5 +57,6 @@
       <td><a href="mechanics.html"><button class="btn3"><p class="text3">Components and their uses</p></button></a></td>
     </tr>
 </table>
+</div>
 </body>
 </html>
