--- a/components.html
+++ b/components.html
@@ -5,13 +5,13 @@
     <title>Prototype code</title>
   </head>
   <body>
-   div class="w3-sidebar w3-bar-block" style="width:25%">
+   <div class="w3-sidebar w3-bar-block" style="width:15%">
   <a href="index.html" class="btn1">Link 1</a>
   <a href="components.html" class="btn2">Link 2</a>
   <a href="mechanics.html" class="btn3">Link 3</a>
 </div>
 
-<div style="margin-left:25%">
+<div style="margin-left:15%">
     <img src="Breasybanner.jpg" alt="banner2" width=100% height=400/>
     <p class="header2">Prototype code</p>
     <table border=0.5>
