--- a/components.html
+++ b/components.html
@@ -7,8 +7,8 @@
   <body>
    <div class="w3-sidebar w3-bar-block" style="width:15%">
   <a href="index.html" class="btn1">Link 1</a><br>
-  <a href="components.html" class="btn2">Link 2</a>
-  <a href="mechanics.html" class="btn3">Link 3</a>
+  <a href="components.html" class="btn2">Link 2</a><br>
+  <a href="mechanics.html" class="btn3">Link 3</a><br>
 </div>
 
 <div style="margin-left:15%">
