--- a/components.html
+++ b/components.html
@@ -17,13 +17,14 @@
     <table border=0.5>
       <tr>
         <td><img src="unnamed.jpg" alt= "computer manufacutring plant" width= 700 height= 400></img></td>
-        <td class="text">Large amounts of greenhouse gases are released every year as a result of computer prodution. Research has found that just the manufacturing and transportation alone makes up 85% of the greenhouse gas emissions from a computer used for 6 years.
-        <ul class="text">
+        <td class="text">The code that we have installed on our microbit is responsible for the LED temperature display as well as the automatic factor of the Breasy system.
+        <ol class="text">
           <li>Harvesting the materials and minerals used for computer part production uses lots of energy and releases pollution due to harmful mining practises</li>
           <li>Many parts such as the motherboard need high-precision lasers that consume a lot of energy which could be supplied by fossil fuels</li>
           <li>As most parts are produced overseas, they need to be shipped by large cargo boats that produce around 1000 megatons of carbon dioxide per year</li>
-        </ul>
+        </ol>
         </td>
+      <td><img src="comp tech code.jpg" alt="code" width=600 height=1000></td>
       </tr>
     </table>
     <table border=0.5>
