--- a/components.html
+++ b/components.html
@@ -16,15 +16,14 @@
     <p class="header2">Prototype code</p>
     <table border=0.5>
       <tr>
-        <td><img src="unnamed.jpg" alt= "computer manufacutring plant" width= 700 height= 400></img></td>
         <td class="text">The code that we have installed on our microbit is responsible for the LED temperature display as well as the automatic factor of the Breasy system.
         <ol class="text">
-          <li>Harvesting the materials and minerals used for computer part production uses lots of energy and releases pollution due to harmful mining practises</li>
-          <li>Many parts such as the motherboard need high-precision lasers that consume a lot of energy which could be supplied by fossil fuels</li>
-          <li>As most parts are produced overseas, they need to be shipped by large cargo boats that produce around 1000 megatons of carbon dioxide per year</li>
+          <li>The "forever" block of code that we encase everything else in ensures that the Microbit is always displaying the temperature and checking for temperature differences</li>
+          <li>"show number temperature C" displays the temperature detected from the sensor on the LEDs of the Microbit</li>
+          <li>We use booleans to checka</li>
         </ol>
         </td>
-      <td><img src="comp tech code.jpg" alt="code" width=600 height=700></td>
+      <td><img src="comp tech code.jpg" alt="code" width=600 height=600></td>
       </tr>
     </table>
     <table border=0.5>
