--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>The Breasy uses a temperature sensor on the Microbit connected to the circuit to power the motor whenever the temperature is warmer or colder than any temperature of your choosing, we used room temperature for our demo.</p>
     <table>
         <tr>
-            <td>Insert switch picture</td>
+            <td><img src="Switch.jpeg" alt="switch" width=600 height=600></td>
             <td><img src="Microbit led.jpg" alt="Temp Display" width=700 height=600></td>
         </tr>
         <tr>
