--- a/components.html
+++ b/components.html
@@ -14,7 +14,7 @@
         <ol class="text">
           <li>The "forever" block of code that we encase everything else in ensures that the Microbit is always displaying the temperature and checking for temperature differences</li>
           <li>"show number temperature C" displays the temperature detected from the sensor on the LEDs of the Microbit</li>
-          <li>We use booleans to checka</li>
+          <li>We use booleans to check when the temperature is not</li>
         </ol>
         </td>
       <td><img src="comp tech code.jpg" alt="code" width=600 height=600></td>
@@ -33,18 +33,6 @@
         <td><img src="datastorage.jpg" alt= "servers" width= 650 height= 325></img></td>
       </tr>
     </table>
-<table border=0.5>
-  <tr>
-    <td><img src="computerlandfill.jpg" alt="Computer Waste" width=600 height=400></img></td>
-    <td>
-      <ul class="text">
-        <li>Computers and the parts they are made of do not decompose easily, with some parts taking up to a million years to decompose.</li>
-        <li>Certain methods to quickly break down the parts like burning release harmful gases into the atmosphere which could harm the people that live near the landfills.</li>
-        <li>Parts like the batteries may leak acid into the ground that pollutes the drinking water for those living around the e-waste storage sites.</li>
-      </ul>
-    </td>
-  </tr>
-</table>
 <table>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
