--- a/mechanics.html
+++ b/mechanics.html
@@ -15,7 +15,7 @@
     <table>
       <tr>
         <td>
-    <img src="tinkercad.png" alt="tinkercad" width=940 height=590>
+    <img src="tinkercad.png" alt="tinkercad" width=65% height=590>
         </td>
       </tr>
       </tr>
@@ -37,22 +37,22 @@
     <table>
       <tr>
         <td class="mechanics">Beginning with the Microbit, code is installed so that a positive signal is sent through gate "0" to a 1k ohm resistor for extra safety.</td>
-        <td><img src="tinkercad1.png" alt="tinkercad1" width=940 height=590></td>
+        <td><img src="tinkercad1.png" alt="tinkercad1" width=65% height=590></td>
       </tr>
       <tr>
-        <td><img src="tinkercad2.png" alt="tinkercad2" width=940 height=590></td>
+        <td><img src="tinkercad2.png" alt="tinkercad2" width=65% height=590></td>
         <td class="mechanics">The positive signal is sent to the middle leg of the transistor, telling it to close the circuit and therefore allow power to flow.</td>
       </tr>
       <tr>
         <td class="mechanics">The next major section is the battery. A 9 volt battery is used so that enough voltage can be supplied to the motor and the positive terminal is conencted to a switch to shut the power on or off.</td>
-        <td><img src="tinkercad3.png" alt="tinkercad3" width=940 height=590></td>
+        <td><img src="tinkercad3.png" alt="tinkercad3" width=65% height=590></td>
       </tr>
       <tr>
-        <td><img src="tinkercad4.png" alt="tinkercad4" width=940 height=590></td>
+        <td><img src="tinkercad4.png" alt="tinkercad4" width=65% height=590></td>
         <td class="mechanics">We have a diode placed with the grey side away from the transistor so that the motor does not send voltage flowing backwards.</td>
       </tr>
       <tr>
-        <td><img src="tinkercad5.png" alt="tinkercad5" width=940 height=590></td>
+        <td><img src="tinkercad5.png" alt="tinkercad5" width=65% height=590></td>
         <td class="mechanics">Finally, once everything else is connected, the motor is connected to both ends of the diode and the circuit will be operational.</td>
       </tr>
     </table>
