--- a/mechanics.html
+++ b/mechanics.html
@@ -15,7 +15,7 @@
     <table>
       <tr>
         <td>
-    <img src="tinkercad.png" alt="tinkercad" width=65% height=590>
+    <img src="tinkercad.png" alt="tinkercad" width=940 height=590>
         </td>
       </tr>
       </tr>
