--- a/components.html
+++ b/components.html
@@ -14,7 +14,7 @@
         <ol class="text">
           <li>The "forever" block of code that we encase everything else in ensures that the Microbit is always displaying the temperature and checking for temperature differences</li>
           <li>"show number temperature C" displays the temperature detected from the sensor on the LEDs of the Microbit</li>
-          <li>We use booleans to check when the temperature is not</li>
+          <li>We use booleans to check when the temperature is less than or greater than 25 degrees celsius, which sends a positive signal to the transistor, telling it to allow power to pass through.</li>
         </ol>
         </td>
       <td><img src="comp tech code.jpg" alt="code" width=700 height=600></td>
