--- a/components.html
+++ b/components.html
@@ -13,8 +13,8 @@
         <td class="text">The code that we have installed on our microbit is responsible for the LED temperature display as well as the automatic factor of the Breasy system.
         <ol class="text">
           <li>The "forever" block of code that we encase everything else in ensures that the Microbit is always displaying the temperature and checking for temperature differences</li>
-          <li>"show number temperature C" displays the temperature detected from the sensor on the LEDs of the Microbit</li>
-          <li>We use booleans to check when the temperature is less than or greater than 25 degrees celsius, which sends a positive signal to the transistor, telling it to allow power to pass through.</li>
+          <li>"show number temperature C" displays the temperature detected from the sensor on the LEDs of the Microbit. The value detected by the sensor is sent to the processor, which displays it on the LEDS.</li>
+          <li>We use if statements to check when the temperature is less than or greater than 25 degrees celsius, which then sends a positive signal to the transistor, telling it to allow power to pass through.</li>
         </ol>
         </td>
       <td><img src="comp tech code.jpg" alt="code" width=700 height=600></td>
