--- a/mechanics.html
+++ b/mechanics.html
@@ -55,7 +55,11 @@
       </tr>
     </table>
     </table>
-    <table border=0.5>
+    <table>
+      <tr>
+            <td class="btndesc">↓To view the Breasy's home page, click here↓</td>
+            <td class="btndesc">↓To see the components of the prototype, click here↓</td>
+        </tr>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
       <td><a href="components.html"><button class="btn2"><p class="text2">Code</p></button></a></td>
