--- a/components.html
+++ b/components.html
@@ -21,6 +21,10 @@
       </tr>
     </table>
 <table>
+  <tr>
+    <td class="btndesc">↓To see the Breasy's home page, click here↓</td>
+    <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
+        </tr>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
       <td><a href="mechanics.html"><button class="btn3"><p class="text3">Components and their uses</p></button></a></td>
