--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <table>
         <tr>
             <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
-            <td class="btndesc">↓To see the components of the prototype, click here↓</td>
+            <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
     <tr>
       <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
