--- a/mechanics.html
+++ b/mechanics.html
@@ -58,7 +58,7 @@
     <table>
       <tr>
             <td class="btndesc">↓To view the Breasy's home page, click here↓</td>
-            <td class="btndesc">↓To see the components of the prototype, click here↓</td>
+            <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
     <tr>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
