--- a/mechanics.html
+++ b/mechanics.html
@@ -11,7 +11,7 @@
      <img src="Breasybanner.jpg" alt="Index Banner" width=100% height=600/>
     </table>
     <p class="header2">Mechanics of the prototype</p>
-    <p class="text">On this page, you will find out how the major parts of the Breasy system work.</p>
+    <p class="partheader2">On this page, you will find out how the major parts of the Breasy system work.</p>
     <table>
       <tr>
         <td>
