--- a/mechanics.html
+++ b/mechanics.html
@@ -17,7 +17,7 @@
         <td>
     <img src="tinkercad.png" alt="tinkercad" width=95% height=590>
         </td>
-      <td>Components list <ul>
+      <td id="complist">Components list <ul>
         <li>1 motor</li>
         <li>1 breadboard</li>
         <li>1 Microbit</li>
