--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
     <tr>
-      <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
+        <td><a href="https://ajeshb2.github.io/HTML-Website-TEJ---Ajesh/"><button class= "btn1"><p class="text1">PassLock</p></button></a></td>
+        <td><a href="mechanics.html"><button class= "btn2"><p class="text2">Components and their uses</p></button></a></td>
         <td><a href="components.html"><button class= "btn3"><p class="text3">Code</p></button></a></td>
     </tr>
 </table>
