--- a/mechanics.html
+++ b/mechanics.html
@@ -61,6 +61,7 @@
             <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
     <tr>
+      <td><a href="https://ajeshb2.github.io/HTML-Website-TEJ---Ajesh/"><button class= "btn1"><p class="text1">PassLock</p></button></a></td>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
       <td><a href="components.html"><button class="btn2"><p class="text2">Code</p></button></a></td>
     </tr>
