--- a/components.html
+++ b/components.html
@@ -26,6 +26,7 @@
     <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
         </tr>
     <tr>
+      <td><a href="https://ajeshb2.github.io/HTML-Website-TEJ---Ajesh/"><button class= "btn1"><p class="text1">PassLock</p></button></a></td>
       <td><a href="index.html"><button class="btn1"><p class="text1">Home Page</p></button></a></td>
       <td><a href="mechanics.html"><button class="btn3"><p class="text3">Components and their uses</p></button></a></td>
     </tr>
