--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </table>
     <table>
         <tr>
+            <td class="btndesc">↓For your home security issues, visit PassLock↓</td>
             <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
             <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
