--- a/components.html
+++ b/components.html
@@ -22,6 +22,7 @@
     </table>
 <table>
   <tr>
+    <td class="btndesc">↓For your home security issues, visit PassLock↓</td>
     <td class="btndesc">↓To see the Breasy's home page, click here↓</td>
     <td class="btndesc">↓To see the details behind the prototype, click here↓</td>
         </tr>
