--- a/mechanics.html
+++ b/mechanics.html
@@ -57,7 +57,7 @@
     </table>
     <table>
       <tr>
-        <td class="btndesc">↓For your home security issues, visit PassLock↓</td>
+        <td class="btndesc">↓For your home security solutions, visit PassLock↓</td>
             <td class="btndesc">↓To view the Breasy's home page, click here↓</td>
             <td class="btndesc">↓To see the coding of the prototype, click here↓</td>
         </tr>
